--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
     ],
     "require": {
         "saloonphp/saloon": "^3.10"
+    },
+    "require-dev": {
+        "laravel/pint": "^1.18"
     }
 }
