--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "mikey/pokeapi-sdk",
     "autoload": {
         "psr-4": {
-            "Mikey\\PokeapiSdk\\": "src/"
+            "PokeApiSdk\\": "src/"
         }
     },
     "authors": [
@@ -12,6 +12,7 @@
         }
     ],
     "require": {
+        "php": "^8.2.0",
         "saloonphp/saloon": "^3.10"
     },
     "require-dev": {
