--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "saloonphp/saloon": "^3.10"
     },
     "require-dev": {
-        "laravel/pint": "^1.18"
+        "laravel/pint": "^1.18",
+        "symfony/var-dumper": "^7.2"
     }
 }
