--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,12 @@
     },
     "require-dev": {
         "laravel/pint": "^1.18",
-        "symfony/var-dumper": "^7.2"
+        "symfony/var-dumper": "^7.2",
+        "pestphp/pest": "^3.7"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     }
 }
